test/cgip/PP/error/inheritance/rep/reperr-24.err105
"Line 44 column 16
258: Construct is multiple defined within the current scope"
